--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: mnistr
 Type: Package
 Title: Utility Functions for MNIST Dataset
 Version: 0.0.0.9000
-Authors@R: person("Gudmundur", "Einarsson", email = "gumeo140688@gmail.com", role = c("aut", "cre"))
+Authors@R: person("Anon", "Anonymous", email = "anon@anon.anon", role = c("aut", "cre"))
 Description: This package provides functions to download, load and plot the
     mnist dataset in R. The goal is to aggregate good functions for working with
     this dataset in one package to ease the workflow for people that are new to
